--- a/agijagi/app/src/main/res/navigation/navigation_graph.xml
+++ b/agijagi/app/src/main/res/navigation/navigation_graph.xml
@@ -82,4 +82,32 @@
         android:name="likelion.project.agijagi.userchat.UserChatListFragment"
         android:label="fragment_user_chat_list"
         tools:layout="@layout/fragment_user_chat_list" />
+    <fragment
+        android:id="@+id/sellerProductDetailFragment"
+        android:name="likelion.project.agijagi.sellermypage.SellerProductDetailFragment"
+        android:label="fragment_seller_product_detail"
+        tools:layout="@layout/fragment_seller_product_detail" >
+        <action
+            android:id="@+id/action_sellerProductDetailFragment_to_productUpdateFragment"
+            app:destination="@id/productUpdateFragment" />
+    </fragment>
+    <fragment
+        android:id="@+id/productDetailPreviewFragment"
+        android:name="likelion.project.agijagi.sellermypage.ProductDetailPreviewFragment"
+        android:label="fragment_product_detail_preview"
+        tools:layout="@layout/fragment_product_detail_preview" >
+        <action
+            android:id="@+id/action_productDetailPreviewFragment_to_productListFragment"
+            app:destination="@id/productListFragment" />
+    </fragment>
+    <fragment
+        android:id="@+id/productListFragment"
+        android:name="likelion.project.agijagi.sellermypage.ProductListFragment"
+        android:label="fragment_product_list"
+        tools:layout="@layout/fragment_product_list" />
+    <fragment
+        android:id="@+id/productUpdateFragment"
+        android:name="likelion.project.agijagi.sellermypage.ProductUpdateFragment"
+        android:label="fragment_product_update"
+        tools:layout="@layout/fragment_product_update" />
 </navigation>
