--- a/agijagi/app/src/main/res/values/array.xml
+++ b/agijagi/app/src/main/res/values/array.xml
@@ -57,4 +57,17 @@
         <item>새마을금고</item>
     </array>
 
+    <array name="product_add_category">
+        <item>ALL</item>
+        <item>Plate</item>
+        <item>Cup</item>
+        <item>Bowl</item>
+        <item>Order made</item>
+    </array>
+
+    <array name="product_add_select_ordermade">
+        <item>주문 제작 가능</item>
+        <item>주문 제작 불가능</item>
+    </array>
+
 </resources>
