--- a/agijagi/app/src/main/res/layout/fragment_payment.xml
+++ b/agijagi/app/src/main/res/layout/fragment_payment.xml
@@ -24,7 +24,7 @@
             android:layout_height="wrap_content">
 
             <TextView
-                android:id="@+id/textView_order_delivery_title"
+                android:id="@+id/textView_payment_delivery_title"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="16dp"
@@ -43,7 +43,7 @@
                 android:layout_marginStart="16dp"
                 android:layout_marginTop="16dp"
                 android:layout_marginEnd="16dp"
-                app:layout_constraintTop_toBottomOf="@id/textView_order_delivery_title">
+                app:layout_constraintTop_toBottomOf="@id/textView_payment_delivery_title">
 
                 <androidx.constraintlayout.widget.ConstraintLayout
                     android:layout_width="match_parent"
@@ -116,7 +116,7 @@
             </com.google.android.material.card.MaterialCardView>
 
             <View
-                android:id="@+id/view_order_detail_stick"
+                android:id="@+id/view_payment_detail_stick"
                 android:layout_width="match_parent"
                 android:layout_height="8dp"
                 android:layout_marginTop="24dp"
@@ -127,7 +127,7 @@
                 app:layout_constraintTop_toBottomOf="@id/cardview_payment" />
 
             <TextView
-                android:id="@+id/textView_order_payment_category_title"
+                android:id="@+id/textView_payment_category_title"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="16dp"
@@ -137,7 +137,7 @@
                 android:textSize="16sp"
                 android:textStyle="bold"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/view_order_detail_stick" />
+                app:layout_constraintTop_toBottomOf="@+id/view_payment_detail_stick" />
 
             <LinearLayout
                 android:id="@+id/linearLayout"
@@ -149,7 +149,7 @@
                 android:orientation="vertical"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/textView_order_payment_category_title">
+                app:layout_constraintTop_toBottomOf="@+id/textView_payment_category_title">
 
                 <LinearLayout
                     android:layout_width="match_parent"
@@ -158,7 +158,7 @@
                     android:orientation="horizontal">
 
                     <androidx.appcompat.widget.AppCompatButton
-                        android:id="@+id/button_order_payment_creditcard"
+                        android:id="@+id/button_payment_category_creditcard"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_marginEnd="4dp"
@@ -169,7 +169,7 @@
                         android:textSize="14sp" />
 
                     <androidx.appcompat.widget.AppCompatButton
-                        android:id="@+id/button_order_payment_simplepay"
+                        android:id="@+id/button_payment_category_simplepay"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_marginStart="4dp"
@@ -186,7 +186,7 @@
                     android:orientation="horizontal">
 
                     <androidx.appcompat.widget.AppCompatButton
-                        android:id="@+id/button_order_payment_mobile"
+                        android:id="@+id/button_payment_category_mobile"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_marginEnd="4dp"
@@ -197,7 +197,7 @@
                         android:textSize="14sp" />
 
                     <androidx.appcompat.widget.AppCompatButton
-                        android:id="@+id/button_order_payment_bank"
+                        android:id="@+id/button_payment_category_bank"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_marginStart="4dp"
@@ -211,7 +211,7 @@
             </LinearLayout>
 
             <com.google.android.material.textfield.TextInputLayout
-                android:id="@+id/dropdownmenu_order_payment_category"
+                android:id="@+id/dropdownmenu_payment_category"
                 style="@style/Widget.Material3.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
@@ -229,7 +229,7 @@
             </com.google.android.material.textfield.TextInputLayout>
 
             <com.google.android.material.textfield.TextInputLayout
-                android:id="@+id/dropdownmenu_order_payment_category_detail"
+                android:id="@+id/dropdownmenu_payment_category_detail"
                 style="@style/Widget.Material3.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
@@ -237,7 +237,7 @@
                 android:layout_marginTop="8dp"
                 android:layout_marginEnd="16dp"
                 android:hint="일시불"
-                app:layout_constraintTop_toBottomOf="@+id/dropdownmenu_order_payment_category">
+                app:layout_constraintTop_toBottomOf="@+id/dropdownmenu_payment_category">
 
                 <AutoCompleteTextView
                     android:layout_width="match_parent"
@@ -247,8 +247,24 @@
 
             </com.google.android.material.textfield.TextInputLayout>
 
+            <com.google.android.material.textfield.TextInputLayout
+                android:id="@+id/editinputlayout_payment_category_detail"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="16dp"
+                android:layout_marginTop="8dp"
+                android:layout_marginEnd="16dp"
+                app:layout_constraintTop_toBottomOf="@+id/dropdownmenu_payment_category">
+
+                <com.google.android.material.textfield.TextInputEditText
+                    android:id="@+id/editinput_payment_category_detail"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:textColorHint="@color/hint_color" />
+            </com.google.android.material.textfield.TextInputLayout>
+
             <View
-                android:id="@+id/view_order_detail_stick2"
+                android:id="@+id/view_payment_detail_stick2"
                 android:layout_width="match_parent"
                 android:layout_height="8dp"
                 android:layout_marginTop="24dp"
@@ -256,10 +272,10 @@
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintHorizontal_bias="0.0"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@id/dropdownmenu_order_payment_category_detail" />
+                app:layout_constraintTop_toBottomOf="@id/dropdownmenu_payment_category_detail" />
 
             <TextView
-                android:id="@+id/textView_order_payment_amount_title"
+                android:id="@+id/textView_payment_amount_title"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="16dp"
@@ -269,10 +285,10 @@
                 android:textSize="16sp"
                 android:textStyle="bold"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@id/view_order_detail_stick2" />
+                app:layout_constraintTop_toBottomOf="@id/view_payment_detail_stick2" />
 
             <TextView
-                android:id="@+id/textView_order_amount_text"
+                android:id="@+id/textView_payment_amount_text"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="16dp"
@@ -281,10 +297,10 @@
                 android:textColor="@color/black"
                 android:textSize="14sp"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@id/textView_order_payment_amount_title" />
+                app:layout_constraintTop_toBottomOf="@id/textView_payment_amount_title" />
 
             <TextView
-                android:id="@+id/textView_order_amount_value"
+                android:id="@+id/textView_payment_amount_value"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="16dp"
@@ -293,10 +309,10 @@
                 android:textColor="@color/black"
                 android:textSize="14sp"
                 app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintTop_toBottomOf="@id/textView_order_payment_amount_title" />
+                app:layout_constraintTop_toBottomOf="@id/textView_payment_amount_title" />
 
             <TextView
-                android:id="@+id/textView_order_shipping_fee_text"
+                android:id="@+id/textView_payment_shipping_fee_text"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="16dp"
@@ -305,10 +321,10 @@
                 android:textColor="@color/black"
                 android:textSize="14sp"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@id/textView_order_amount_text" />
+                app:layout_constraintTop_toBottomOf="@id/textView_payment_amount_text" />
 
             <TextView
-                android:id="@+id/textView_order_shipping_fee_value"
+                android:id="@+id/textView_payment_shipping_fee_value"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="8dp"
@@ -317,20 +333,20 @@
                 android:textColor="@color/black"
                 android:textSize="14sp"
                 app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintTop_toBottomOf="@id/textView_order_amount_value" />
+                app:layout_constraintTop_toBottomOf="@id/textView_payment_amount_value" />
 
             <View
-                android:id="@+id/line_order"
+                android:id="@+id/line_payment"
                 android:layout_width="match_parent"
                 android:layout_height="1dp"
                 android:layout_marginTop="16dp"
                 android:background="@color/black"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@id/textView_order_shipping_fee_value" />
+                app:layout_constraintTop_toBottomOf="@id/textView_payment_shipping_fee_value" />
 
             <TextView
-                android:id="@+id/textView_order_total_mount_text"
+                android:id="@+id/textView_payment_total_mount_text"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="16dp"
@@ -340,10 +356,10 @@
                 android:textSize="14sp"
                 android:textStyle="bold"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@id/line_order" />
+                app:layout_constraintTop_toBottomOf="@id/line_payment" />
 
             <TextView
-                android:id="@+id/textView_order_total_mount_value"
+                android:id="@+id/textView_payment_total_mount_value"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="12dp"
@@ -353,10 +369,10 @@
                 android:textSize="14sp"
                 android:textStyle="bold"
                 app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintTop_toBottomOf="@id/line_order" />
+                app:layout_constraintTop_toBottomOf="@id/line_payment" />
 
             <androidx.appcompat.widget.AppCompatButton
-                android:id="@+id/button_order_pament"
+                android:id="@+id/button_payment_payment"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="24dp"
@@ -364,7 +380,7 @@
                 android:text="159,000원 결제하기"
                 android:textColor="@color/hint_color"
                 android:textSize="16dp"
-                app:layout_constraintTop_toBottomOf="@id/textView_order_total_mount_value" />
+                app:layout_constraintTop_toBottomOf="@id/textView_payment_total_mount_value" />
         </androidx.constraintlayout.widget.ConstraintLayout>
 
     </ScrollView>
