Style: colors.xml 컬러 이름 변경

--- a/agijagi/app/src/main/res/drawable/wide_box_bottom_inactive.xml
+++ b/agijagi/app/src/main/res/drawable/wide_box_bottom_inactive.xml
@@ -5,6 +5,6 @@
     <size
         android:width="360dp"
         android:height="56dp" />
-    <solid android:color="@color/jagi_gray" />
+    <solid android:color="@color/jagi_inactive" />
 
 </shape>
