--- a/agijagi/app/src/main/res/layout/item_shopping_list.xml
+++ b/agijagi/app/src/main/res/layout/item_shopping_list.xml
@@ -8,9 +8,9 @@
     <com.google.android.material.card.MaterialCardView
         android:layout_margin="4dp"
         app:cardCornerRadius="8dp"
-        android:backgroundTint="@color/jagi_white"
+        android:backgroundTint="@color/jagi_white_30"
         app:strokeWidth="1dp"
-        app:strokeColor="@color/jagi_gray"
+        app:strokeColor="@color/jagi_inactive"
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
