--- a/agijagi/app/src/main/res/layout/fragment_custom_product_detail.xml
+++ b/agijagi/app/src/main/res/layout/fragment_custom_product_detail.xml
@@ -241,7 +241,7 @@
                 android:layout_marginVertical="4dp"
                 android:background="@drawable/wide_box_rounded_purchase_button_solid"
                 android:text="구매하기"
-                android:textColor="@color/hint_color"
+                android:textColor="@color/jagi_hint_color"
                 android:textSize="16dp" />
 
         </LinearLayout>
