--- a/agijagi/app/src/main/res/layout/fragment_payment.xml
+++ b/agijagi/app/src/main/res/layout/fragment_payment.xml
@@ -260,7 +260,7 @@
                     android:id="@+id/editinput_payment_category_detail"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:textColorHint="@color/hint_color" />
+                    android:textColorHint="@color/jagi_hint_color" />
             </com.google.android.material.textfield.TextInputLayout>
 
             <View
