--- a/agijagi/app/src/main/res/layout/fragment_product_add.xml
+++ b/agijagi/app/src/main/res/layout/fragment_product_add.xml
@@ -164,7 +164,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="상품정보"
-                    android:textAppearance="@style/TextAppearance.Material3.TitleLarge"
+                    android:textSize="20sp"
                     android:textStyle="bold"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toTopOf="parent" />
@@ -174,14 +174,14 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="8dp"
-                    android:background="@drawable/wide_box_rounded_stroke">
+                    android:background="@drawable/wide_box_rounded_stroke"
+                    app:hintEnabled="false">
 
                     <com.google.android.material.textfield.TextInputEditText
                         android:id="@+id/editinput_product_add_productname"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:hint="상품명을 입력해주세요"
-                        android:textColorHint="@color/jagi_inactiveText" />
                         android:maxLines="1" />
                 </com.google.android.material.textfield.TextInputLayout>
 
@@ -190,7 +190,8 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="8dp"
-                    android:background="@drawable/wide_box_rounded_stroke">
+                    android:background="@drawable/wide_box_rounded_stroke"
+                    app:hintEnabled="false">
 
                     <com.google.android.material.textfield.TextInputEditText
                         android:id="@+id/editinputlayout_product_add_productprice"
@@ -198,19 +199,20 @@
                         android:layout_height="wrap_content"
                         android:hint="가격을 입력해주세요"
                         android:inputType="number|numberDecimal"
-                        android:textColorHint="@color/jagi_inactiveText" />
                         android:maxLines="1" />
                 </com.google.android.material.textfield.TextInputLayout>
 
                 <com.google.android.material.textfield.TextInputLayout
-                    android:id="@+id/menu_product_add_select_category"
                     style="@style/Widget.Material3.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="8dp"
-                    android:hint="카테고리 선택">
+                    android:hint="카테고리 선택"
+                    android:textColorHint="@color/jagi_gray"
+                    app:hintEnabled="true">
 
                     <AutoCompleteTextView
+                        android:id="@+id/menu_product_add_select_category"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:inputType="none"
@@ -219,14 +221,16 @@
                 </com.google.android.material.textfield.TextInputLayout>
 
                 <com.google.android.material.textfield.TextInputLayout
-                    android:id="@+id/menu_product_add_select_ordermade"
                     style="@style/Widget.Material3.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="8dp"
-                    android:hint="주문제작 가능 여부 선택">
+                    android:hint="주문제작 가능 여부 선택"
+                    android:textColorHint="@color/jagi_gray"
+                    app:hintEnabled="true">
 
                     <AutoCompleteTextView
+                        android:id="@+id/menu_product_add_select_ordermade"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:inputType="none"
@@ -242,7 +246,7 @@
                     android:layout_marginTop="8dp"
                     android:background="@drawable/wide_box_rounded_stroke"
                     android:padding="8dp"
-                    android:stretchColumns="0"
+                    android:stretchColumns="1"
                     android:visibility="visible">
 
                     <TableRow>
@@ -250,14 +254,14 @@
                         <TextView
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
-                            android:layout_span="2"
+                            android:layout_span="3"
                             android:gravity="start"
                             android:text="주문제작 옵션 선택"
                             android:textAppearance="@style/TextAppearance.Material3.BodyMedium" />
 
                     </TableRow>
 
-                    <TableRow>
+                    <TableRow android:layout_marginTop="8dp">
 
                         <CheckBox
                             android:id="@+id/checkBox_product_add_option1"
@@ -266,11 +270,14 @@
                             android:layout_gravity="center_vertical"
                             android:text="레터링" />
 
+                        <Space
+                            android:layout_width="match_parent"
+                            android:layout_height="match_parent" />
 
                         <com.google.android.material.textfield.TextInputLayout
                             android:id="@+id/editinputlayout_product_add_option1_priceedit"
                             android:layout_width="match_parent"
-                            android:layout_height="match_parent"
+                            android:layout_height="32dp"
                             android:background="@drawable/small_box_rounded_stroke"
                             android:gravity="end|center_vertical"
                             android:padding="0dp"
@@ -289,7 +296,7 @@
 
                     </TableRow>
 
-                    <TableRow>
+                    <TableRow android:layout_marginTop="4dp">
 
                         <CheckBox
                             android:id="@+id/checkBox_product_add_option2"
@@ -298,12 +305,17 @@
                             android:layout_gravity="center_vertical"
                             android:text="그림" />
 
+                        <Space
+                            android:layout_width="match_parent"
+                            android:layout_height="match_parent" />
+
                         <com.google.android.material.textfield.TextInputLayout
                             android:id="@+id/editinputlayout_product_add_option2_priceedit"
                             android:layout_width="match_parent"
-                            android:layout_height="match_parent"
+                            android:layout_height="32dp"
                             android:background="@drawable/small_box_rounded_stroke"
                             android:gravity="end|center_vertical"
+                            android:padding="0dp"
                             app:hintEnabled="false">
 
                             <com.google.android.material.textfield.TextInputEditText
@@ -313,7 +325,8 @@
                                 android:autoSizeTextType="uniform"
                                 android:gravity="end|center_vertical"
                                 android:hint="추가 금액"
-                                android:inputType="number|numberDecimal" />
+                                android:inputType="number|numberDecimal"
+                                android:padding="0dp" />
                         </com.google.android.material.textfield.TextInputLayout>
 
                     </TableRow>
@@ -325,15 +338,15 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="8dp"
-                    android:background="@drawable/wide_box_rounded_stroke">
+                    android:background="@drawable/wide_box_rounded_stroke"
+                    app:hintEnabled="false">
 
                     <com.google.android.material.textfield.TextInputEditText
                         android:id="@+id/editinputlayout_product_add_detail"
                         android:layout_width="match_parent"
                         android:layout_height="200dp"
                         android:gravity="start"
-                        android:hint="상품 상세정보를 입력해주세요"
-                        android:textColorHint="@color/jagi_inactiveText" />
+                        android:hint="상품 상세정보를 입력해주세요" />
                 </com.google.android.material.textfield.TextInputLayout>
 
             </LinearLayout>
