Style: colors.xml 컬러 이름 변경 (#36)
* Style: colors.xml 컬러 이름 변경

* Fix: colors.xml 컬러 이름 수정으로 생긴 오류 해결

--- a/agijagi/app/src/main/res/layout/fragment_product_add.xml
+++ b/agijagi/app/src/main/res/layout/fragment_product_add.xml
@@ -181,8 +181,9 @@
                         android:id="@+id/editinput_product_add_productname"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:hint="상품명을 입력해주세요"
+                        android:hint="상품명을 입력해주세요" />
                         android:maxLines="1" />
+
                 </com.google.android.material.textfield.TextInputLayout>
 
                 <com.google.android.material.textfield.TextInputLayout
