--- a/agijagi/app/src/main/res/layout/fragment_payment.xml
+++ b/agijagi/app/src/main/res/layout/fragment_payment.xml
@@ -165,7 +165,7 @@
                         android:layout_weight="1"
                         android:background="@drawable/narrow_box_rounded_button_solid"
                         android:text="신용카드"
-                        android:textColor="@color/hint_color"
+                        android:textColor="@color/jagi_hint_color"
                         android:textSize="14sp" />
 
                     <androidx.appcompat.widget.AppCompatButton
@@ -260,7 +260,7 @@
                     android:id="@+id/editinput_payment_category_detail"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:textColorHint="@color/hint_color" />
+                    android:textColorHint="@color/jagi_hint_color" />
             </com.google.android.material.textfield.TextInputLayout>
 
             <View
@@ -378,7 +378,7 @@
                 android:layout_marginTop="24dp"
                 android:background="@drawable/wide_box_bottom_active"
                 android:text="159,000원 결제하기"
-                android:textColor="@color/hint_color"
+                android:textColor="@color/jagi_hint_color"
                 android:textSize="16dp"
                 app:layout_constraintTop_toBottomOf="@id/textView_payment_total_mount_value" />
         </androidx.constraintlayout.widget.ConstraintLayout>
